--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
   <body>
     <div id='root'>
     </div>
-    <script src="https://maps.googleapis.com/maps/api/js?libraries=drawing"></script>
+    <script src="https://maps.googleapis.com/maps/api/js"></script>
     <script src="/react-google-maps-example/bundle.js"></script>
   </body>
 </html>
